--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -37,13 +37,13 @@
         app:layout_constraintVertical_bias="0.865" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/Username"
+        android:id="@+id/Email"
         android:layout_width="150dp"
         android:layout_height="48dp"
         android:layout_weight="1"
         android:background="@color/white"
         android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:hint="Username"
+        android:hint="Email"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
