--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: "Josefin Sans", sans-serif;
 }
 
-.hero{
+.page{
     height: 100%;
     width: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url(../images/backgroundImg.jpeg);
+    background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url(../images/backgroundImage.jpg);
     background-position: center;
     background-size: cover;
     position: absolute;
@@ -46,7 +47,7 @@
     position: absolute;
     width: 110px;
     height: 100%;
-    background: linear-gradient(to right, #ff105f, #ffad06);
+    background: #ea1538;
     border-radius: 30px;
     transition: .5s;
 
@@ -89,10 +90,28 @@
     cursor: pointer;
     display: block;
     margin: auto;
-    background: linear-gradient(to right, #ff105f, #ffad06);
+    background: #ea1538;
     border: 0;
     outline: none;
     border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.buysell-btn{
+    width: 85%;
+    padding: 10px 30px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    background: #ea1538;
+    border: 0;
+    outline: none;
+    border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
 }
 
 #login{
@@ -101,4 +120,60 @@
 
 #register{
     left: 450px;
+}
+
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-top: 40px;
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
+.name{
+    color: white;
+    font-size: 28px;
+}
+
+span{
+    color: #ea1538;
+}
+
+nav ul li{
+    list-style-type: none;
+    display: inline-block;
+    padding: 10px 20px;
+}
+
+nav ul li a{
+    color:white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+nav ul li a:hover{
+    color: #ea1538;
+    transition: .3s;
+}
+
+.logReg{
+    border: none;
+    background: #ea1538;
+    padding: 12px 30px;
+    border-radius: 30px;
+    color: white;
+    font-weight: bold;
+    font-size: 15px;
+    transition: .4s;
+}
+
+.logReg:hover{
+    transform: scale(1.2);
+    cursor: pointer;
+}
+
+.logo{
+    padding: 10px 20px;
+    width: 100px;
 }
