--- a/public/page/temp_broker_login.ejs
+++ b/public/page/temp_broker_login.ejs
@@ -7,7 +7,7 @@
         <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     </head>
     <body>
-        <div class="hero">
+        <div class="page">
             <div class="form-box">
                 <a href="/login">Are you a Trader?</a>
                 <div class="button-box">
