--- a/Archive/style.css
+++ b/Archive/style.css
@@ -100,7 +100,7 @@
 }
 
 .buysell-btn{
-    width: 85%;
+    width: 15%;
     padding: 10px 30px;
     cursor: pointer;
     display: block;
@@ -177,3 +177,12 @@ nav ul li a:hover{
     padding: 10px 20px;
     width: 100px;
 }
+
+.form-popup {
+    display: none;
+    position: fixed;
+    bottom: 0;
+    right: 15px;
+    border: 3px solid #f1f1f1;
+    z-index: 9;
+  }
