--- a/public/page/index.ejs
+++ b/public/page/index.ejs
@@ -7,41 +7,53 @@
         <script src="https://www.gstatic.com/firebasejs/4.9.0/firebase.js"></script>
     </head>
     <body>
-        <div class="page">
-            <nav>
-                <img class="logo" src="../images/StockEyeLogo2.png">
-                <h2 class="name">Stock <span>Eye</span></h2>
-                <ul>
-                    <li><a hred="/">Home</a></li>
-                    <li><a href="./stocks">Stocks</a></li>
-                    <li><form id="to_brokers" action="/brokers" method="get"><a href="javascript:{}" onclick="document.getElementById('to_brokers').submit();">Brokers</a></form></li>
-                    <%if(currentuser){%>
-                    <li><form id="to_account" action="./account/<%=currentuser.uid%>" method="get"><a href="javascript:{}" onclick="document.getElementById('to_account').submit();">Your profile</a></form></li>
-                    <%}%>
-                </ul>
-                <%if(!currentuser){%>
-                <form action="./login" method="get"><button class="logReg">Login or Register</button></form>
-                <%}else{%>
-                <form action="./signOut" method="get"><button class="logReg">Sign Out</button></form>
-                <%}%>
-            </nav>
+        <div class="page" id="page">
+            <%- include('../partials/navbar')  %> 
             <!--This is a list containing all the stocks -->
             <ul class="stock-list">
                 <!--uses ejs to loop through the Stocks, which are passed here from tbe router-->
                 <% Stocks.forEach(stock => {%>
-                <li class="stock-profile">
-                    <text>>><%= stock.Name %></text>
-                    <!--dynamic route, route depends on what stock you invest in-->
-                    <form action='/buy/<%= stock.Name %> ' method="post">
-                        <button type="submit" class="buysell-btn">Buy</button>
-                        <input id="amount" name="amount" type="text">
-                    </form>
-                    <form action="/sell/<%= stock.Name %> " method="post">
-                        <button type="submit" class="buysell-btn">Sell</button>
-                    </form>
-                </li>
+                    <div>
+                        <li class="stock-profile">
+                            <text><%= stock.Name %></text>
+                            <div>
+                                <!--dynamic route, route depends on what stock you invest in-->
+                                <%if(currentuser){%>
+                                    <%if(userType != 'Broker'){%>
+                                        <button class="buysell-btn" onclick=<%="openInvestment('"+stock.Name+"')"%>>Invest</button>
+                                        <div class="form-page" id="form_page<%= stock.Name %>"></div>
+                                        <div class="form-popup" id="invest_form<%= stock.Name %>">
+                                            <text><%= stock.Name %></text>
+                                            <form action='/buy/<%= stock.Name %> ' method="post">
+                                                <button type="submit" class="buysell-btn">Buy</button>
+                                                <input id="amount" name="amount" type="text">
+                                            </form>
+                                            <form action="/sell/<%= stock.Name %> " method="post">
+                                                <button type="submit" class="buysell-btn">Sell</button>
+                                            </form>
+                                                <button type="button" onclick=<%="closeInvestment('"+stock.Name+"')"%>>Close</button>
+                                        </div>
+                                    <%}%>
+                                <%}%>
+                                <form action="/view/<%= stock.Name %>" method="post">
+                                    <button type="submit" class="buysell-btn">View</button>
+                                </form> 
+                            </div>
+                        </li>
+                    </div>
                 <%}); %>
             </ul>
         </div>
     </body>
+    <script>
+        function openInvestment(name){
+            document.getElementById("form_page"+name).style.display = "block";
+            document.getElementById("invest_form"+name).style.display = "block";
+        }
+        
+        function closeInvestment(name){
+            document.getElementById("form_page"+name).style.display = "none";
+            document.getElementById("invest_form"+name).style.display = "none";
+        }
+    </script>
 </html>
